--- a/src/com/massdown/views/MainWindow.form
+++ b/src/com/massdown/views/MainWindow.form
@@ -28,7 +28,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="pnlMenu" pref="824" max="32767" attributes="0"/>
+          <Component id="pnlMenu" pref="836" max="32767" attributes="0"/>
           <Component id="pnlPrincipalScroll" alignment="0" max="32767" attributes="0"/>
           <Component id="pbarPrincipal" alignment="0" max="32767" attributes="0"/>
       </Group>
@@ -38,7 +38,7 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="pnlMenu" min="-2" pref="85" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-              <Component id="pnlPrincipalScroll" pref="530" max="32767" attributes="0"/>
+              <Component id="pnlPrincipalScroll" pref="557" max="32767" attributes="0"/>
               <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Component id="pbarPrincipal" min="-2" pref="16" max="-2" attributes="0"/>
           </Group>
@@ -246,7 +246,18 @@
     </Container>
     <Component class="javax.swing.JProgressBar" name="pbarPrincipal">
       <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Loading"/>
+        <Property name="borderPainted" type="boolean" value="false"/>
         <Property name="indeterminate" type="boolean" value="true"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[32767, 3]"/>
+        </Property>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[10, 3]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[146, 3]"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
